gvim autostart, xmonad ctrl-shift-q warning, install with packages

--- a/install
+++ b/install
@@ -48,8 +48,411 @@ if $new_install; then
   #FAILS with out of memory compiling: yay -S --needed --noconfirm nextpnr-git #FPGA place and route 
   #these depend on 32 bit packages
   #yay -S --needed --noconfirm openmodelica-git #modelica language
-  #yay -S --needed --noconfirm quartus-free #for Altera FPGA's
+  #yay -S --needed --noconfirm quartus-free #for Altera FPGA
   #yay -S --needed --noconfirm intel-sde #Intel Software Development Emulator
 fi
 
-echo -e "\033[0;32mLog out and in, to activate the environment."
+echo -e "\033[0;32mLog out and in, to activate the environment. First time vim and zsh will install plugins."
+
+#the following lines are recognized by rollarch via "^#PKG: " and "^#REPO: "
+#PKG: bash
+#PKG: bzip2
+#PKG: coreutils
+#PKG: cryptsetup
+#PKG: device-mapper
+#PKG: dhcpcd
+#PKG: diffutils
+#PKG: e2fsprogs
+#PKG: file
+#PKG: filesystem
+#PKG: findutils
+#PKG: gawk
+#PKG: gcc-libs
+#PKG: gettext
+#PKG: glibc
+#PKG: grep
+#PKG: gzip
+#PKG: inetutils
+#PKG: iproute2
+#PKG: iputils
+#PKG: less
+#PKG: licenses
+#PKG: linux
+#PKG: linux-firmware
+#PKG: logrotate
+#PKG: man-db
+#PKG: jfsutils
+#PKG: lvm2
+#PKG: reiserfsprogs
+#PKG: xfsprogs
+#PKG: man-pages
+#PKG: mdadm
+#PKG: pacman
+#PKG: pciutils
+#PKG: perl
+#PKG: procps-ng
+#PKG: psmisc
+#PKG: s-nail
+#PKG: sed
+#PKG: nano
+#PKG: vi
+#PKG: shadow
+#PKG: sysfsutils
+#PKG: systemd-sysvcompat
+#PKG: tar
+#PKG: texinfo
+#PKG: usbutils
+#PKG: util-linux
+#PKG: which
+#PKG: nfs-utils
+#PKG: samba
+#PKG: sudo
+#PKG: git
+#PKG: mercurial
+#PKG: subversion
+#PKG: python
+#PKG: devtools
+#PKG: dialog
+#PKG: wpa_supplicant
+#PKG: ntp
+#PKG: openssh
+#PKG: stow
+#PKG: ripgrep
+#PKG: fd
+#PKG: bc
+#PKG: tmux
+#PKG: wget
+#PKG: fzf
+#PKG: unzip
+#PKG: pacman-contrib
+#PKG: bat
+#PKG: ncdu
+#PKG: the_silver_searcher
+#PKG: rtorrent
+#PKG: tree
+#PKG: p7zip
+#PKG: ranger
+#PKG: keybase
+#PKG: kbfs
+#PKG: keybase-gui
+#PKG: qrencode
+#PKG: pass
+#PKG: lsof
+#PKG: bind-tools
+#PKG: mtr
+#PKG: socat
+#PKG: htop
+#PKG: iotop
+#PKG: openbsd-netcat
+#PKG: strace
+#PKG: exfat-utils
+#PKG: dosfstools
+#PKG: f2fs-tools
+#PKG: autoconf
+#PKG: automake
+#PKG: binutils
+#PKG: bison
+#PKG: fakeroot
+#PKG: flex
+#PKG: gcc
+#PKG: groff
+#PKG: libtool
+#PKG: m4
+#PKG: make
+#PKG: patch
+#PKG: pkgconf
+#PKG: systemd
+#PKG: cmake
+#PKG: meson
+#PKG: cscope
+#PKG: ctags
+#PKG: llvm
+#PKG: clang
+#PKG: gdb
+#PKG: lldb
+#PKG: boost
+#PKG: eigen
+#PKG: acpi
+#PKG: powerline
+#PKG: powerline-fonts
+#PKG: awesome-terminal-fonts
+#PKG: jshon
+#PKG: zsh
+#PKG: zsh-syntax-highlighting
+#PKG: zsh-autosuggestions
+#PKG: zsh-completions
+#PKG: zsh-history-substring-search
+#PKG: neovim
+#PKG: python-neovim
+#PKG: gvim
+#PKG: pluma
+#PKG: python-gobject
+#PKG: python-pyqt5
+#PKG: python-scipy
+#PKG: python-sympy
+#PKG: python-sip
+#PKG: python-cffi
+#PKG: python-cairocffi
+#PKG: python-h5py
+#PKG: python-beautifulsoup4
+#PKG: python-html5lib
+#PKG: python-bleach
+#PKG: python-pytz
+#PKG: python-docker
+#PKG: python-docutils
+#PKG: python-gmpy2
+#PKG: python-jinja
+#PKG: python-matplotlib
+#PKG: python-pillow
+#PKG: python-pip
+#PKG: python-pygal
+#PKG: python-pygments
+#PKG: python-pylint
+#PKG: python-whoosh
+#PKG: python-watchdog
+#PKG: python-pytest
+#PKG: python-mock
+#PKG: python-pytest-mock
+#PKG: python-coverage
+#PKG: python-pytest-cov
+#PKG: python-setuptools
+#PKG: python-wheel
+#PKG: python-snowballstemmer
+#PKG: python-virtualenv
+#PKG: python-yaml
+#PKG: python-django
+#PKG: python-tornado
+#PKG: python-tox
+#PKG: python-pandas
+#PKG: python-cvxopt
+#PKG: python-webtest
+#PKG: python-sphinx
+#PKG: python-lxml
+#PKG: python-pyx
+#PKG: python-urllib3
+#PKG: python-dateutil
+#PKG: python-decorator
+#PKG: python-pyparsing
+#PKG: python-nltk
+#PKG: ipython
+#PKG: python-ipykernel
+#PKG: jupyter
+#PKG: cython
+#PKG: sqlite
+#PKG: mariadb
+#PKG: jdk-openjdk
+#PKG: yarn
+#PKG: npm
+#PKG: nodejs
+#PKG: prettier
+#PKG: scala
+#PKG: sbt
+#PKG: gradle
+#PKG: clojure
+#PKG: groovy
+#PKG: ant
+#PKG: maven
+#PKG: go
+#PKG: mono
+#PKG: dotnet-sdk
+#PKG: skia-sharp
+#PKG: ghc
+#PKG: pandoc
+#PKG: cabal-install
+#PKG: git-annex
+#PKG: lua
+#PKG: rust
+#PKG: julia
+#PKG: openblas
+#PKG: gcc-fortran
+#PKG: gcc-objc
+#PKG: tk
+#PKG: ruby
+#PKG: fpc
+#PKG: atom
+#PKG: eclipse-cpp
+#PKG: intellij-idea-community-edition
+#PKG: lazarus
+#PKG: php
+#PKG: nginx
+#PKG: mediawiki
+#PKG: bluez
+#PKG: bluez-utils
+#PKG: alsa-utils
+#PKG: pulseaudio
+#PKG: pulseaudio-alsa
+#PKG: pulseaudio-bluetooth
+#PKG: pavucontrol
+#PKG: paprefs
+#PKG: xf86-input-libinput
+#PKG: xf86-input-synaptics
+#PKG: xf86-video-intel
+#PKG: xf86-video-vesa
+#PKG: nvidia
+#PKG: nvidia-utils
+#PKG: xorg-xsetroot
+#PKG: xorg-xkill
+#PKG: xorg-xbacklight
+#PKG: xorg-bdftopcf
+#PKG: xorg-iceauth
+#PKG: xorg-luit
+#PKG: xorg-mkfontdir
+#PKG: xorg-mkfontscale
+#PKG: xorg-sessreg
+#PKG: xorg-setxkbmap
+#PKG: xorg-smproxy
+#PKG: xorg-x11perf
+#PKG: xorg-xauth
+#PKG: xorg-xcmsdb
+#PKG: xorg-xcursorgen
+#PKG: xorg-xdpyinfo
+#PKG: xorg-xdriinfo
+#PKG: xorg-xev
+#PKG: xorg-xgamma
+#PKG: xorg-xhost
+#PKG: xorg-xinput
+#PKG: xorg-xkbcomp
+#PKG: xorg-xkbevd
+#PKG: xorg-xkbutils
+#PKG: xorg-xlsatoms
+#PKG: xorg-xlsclients
+#PKG: xorg-xmodmap
+#PKG: xorg-xpr
+#PKG: xorg-xprop
+#PKG: xorg-xrandr
+#PKG: xorg-xrdb
+#PKG: xorg-xrefresh
+#PKG: xorg-xset
+#PKG: xorg-xvinfo
+#PKG: xorg-xwd
+#PKG: xorg-xwininfo
+#PKG: xorg-xwud
+#PKG: xorg-server
+#PKG: openssh-askpass
+#PKG: xmonad
+#PKG: xmonad-contrib
+#PKG: i3-wm
+#PKG: openbox
+#PKG: xterm
+#PKG: alacritty
+#PKG: rxvt-unicode
+#PKG: xorg-xinit
+#PKG: dmenu
+#PKG: gmrun
+#PKG: scrot
+#PKG: slock
+#PKG: libnotify
+#PKG: dunst
+#PKG: xsel
+#PKG: xclip
+#PKG: dex
+#PKG: noto-fonts
+#PKG: noto-fonts-cjk
+#PKG: noto-fonts-emoji
+#PKG: noto-fonts-extra
+#PKG: ttf-fira-mono
+#PKG: ttf-fira-code
+#PKG: ttf-anonymous-pro
+#PKG: ttf-fantasque-sans-mono
+#PKG: ttf-dejavu
+#PKG: ttf-freefont
+#PKG: xorg-fonts-misc
+#PKG: ttf-inconsolata
+#PKG: ttf-roboto
+#PKG: bdf-unifont
+#PKG: virtualbox-guest-modules-arch
+#PKG: virtualbox-guest-utils
+#PKG: virtualbox-host-modules-arch
+#PKG: virtualbox
+#PKG: vagrant
+#PKG: docker
+#PKG: docker-compose
+#PKG: dnsmasq
+#PKG: qemu
+#PKG: qemu-arch-extra
+#PKG: picocom
+#PKG: ddrescue
+#PKG: arm-none-eabi-gcc
+#PKG: kicad
+#PKG: arduino
+#PKG: arduino-docs
+#PKG: yosys
+#PKG: graphviz
+#PKG: vtk
+#PKG: mayavi
+#PKG: opencascade
+#PKG: opencv
+#PKG: opencv-samples
+#PKG: librecad
+#PKG: blender
+#PKG: gimp
+#PKG: krita
+#PKG: inkscape
+#PKG: sk1
+#PKG: fontforge
+#PKG: imagemagick
+#PKG: imagemagick-doc
+#PKG: processing
+#PKG: openscad
+#PKG: libreoffice-fresh
+#PKG: texlive-core
+#PKG: mathjax
+#PKG: texlive-bibtexextra
+#PKG: texlive-fontsextra
+#PKG: texlive-formatsextra
+#PKG: texlive-games
+#PKG: texlive-humanities
+#PKG: texlive-langcyrillic
+#PKG: texlive-latexextra
+#PKG: texlive-music
+#PKG: texlive-pictures
+#PKG: texlive-pstricks
+#PKG: texlive-publishers
+#PKG: texlive-science
+#PKG: vlc
+#PKG: ffmpeg
+#PKG: firefox
+#PKG: chromium
+#PKG: links
+#PKG: qutebrowser
+#PKG: w3m
+#PKG: eom
+#PKG: feh
+#PKG: links
+#PKG: evince
+#PKG: thunar
+#PKG: ghostscript
+#PKG: mupdf
+#PKG: zathura
+#PKG: thunderbird
+#PKG: mutt
+#PKG: offlineimap
+#PKG: msmtp
+#PKG: weechat
+#PKG: dictd
+#PKG: aspell-de
+#PKG: aspell-en
+#PKG: aspell-es
+#PKG: aspell-fr
+#PKG: aspell-it
+#PKG: aspell-ru
+#PKG: vim-spell-en
+#PKG: vim-spell-de
+#PKG: vim-spell-it
+#PKG: vim-spell-fr
+#PKG: vim-spell-ru
+#PKG: vim-spell-es
+#PKG: octave
+#PKG: sagemath
+#PKG: r
+#PKG: geogebra
+#PKG: root
+#PKG: gnuplot
+#PKG: hdf5
+#PKG: pymol
+#PKG: task
+#PKG: ledger
+
+#REPO: arcanisrepo
+#PKG: yay
+
