--- a/install
+++ b/install
@@ -31,7 +31,8 @@ fi
 
 if [[ -n $new_install ]] && $new_install; then
   fc-cache -fv
-  my_pip_user
+  my_python
+  my_nodejs
 fi
 
 echo -e "\033[0;32mLog out and in, to activate the environment. First time vim and zsh will install plugins."
