--- a/install
+++ b/install
@@ -36,6 +36,7 @@ if [[ -n $new_install ]] && $new_install; then
   mkdir -p ~/.local/share/weechat/ssl
   cd ~/.local/share/weechat/ssl
   openssl req -nodes -newkey rsa:2048 -keyout relay.pem -x509 -days 365 -out relay.pem
+  rsync -a ~/dotfiles/etc/weechat/  ~/.local/share/weechat/
 fi
 
 echo -e "\033[0;32mLog out and in, to activate the environment.
