--- a/install
+++ b/install
@@ -31,11 +31,11 @@ fi
 
 if [[ -n $new_install ]] && $new_install; then
   fc-cache -fv
-  my_python
-  my_nodejs
+  bash ~/dotfiles/bin/my_python
+  bash ~/dotfiles/bin/my_nodejs
   mkdir -p ~/.local/var/lib/weechat/ssl
   cd ~/.local/var/lib/weechat/ssl
-  openssl req -nodes -newkey rsa:2048 -keyout relay.pem -x509 -days 365 -out relay.pem
+  openssl req -nodes -newkey rsa:2048 -keyout relay.pem -x509 -days 365 -out relay.pem -subj "/C=AT/ST=AT/L=AT/O=ME/OU=IT/CN=me.org"
 fi
 
 echo -e "\033[0;32mLog out and in, to activate the environment.
