--- a/install
+++ b/install
@@ -33,6 +33,7 @@ if [[ -n $new_install ]] && $new_install; then
   fc-cache -fv
   bash ~/dotfiles/bin/my_python
   bash ~/dotfiles/bin/my_nodejs
+  rsync -a ~/dotfiles/etc/weechat/ ~/.local/var/lib/weechat/
   mkdir -p ~/.local/var/lib/weechat/ssl
   cd ~/.local/var/lib/weechat/ssl
   openssl req -nodes -newkey rsa:2048 -keyout relay.pem -x509 -days 365 -out relay.pem -subj "/C=AT/ST=AT/L=AT/O=ME/OU=IT/CN=me.org"
