added vim-barbaric and ibus-libpinyin

--- a/install
+++ b/install
@@ -48,64 +48,17 @@ First time vim and zsh will install plugins."
 #rollarch rpuntaie-meta is served from another Arch on the LAN via AIP2
 #PKG: rpuntaie-meta
 
-
 ##else with less packages ##-># and add a # above
-##PKG: gpm
-##PKG: bash
-##PKG: bzip2
-##PKG: coreutils
-##PKG: dhcpcd
-##PKG: diffutils
-##PKG: e2fsprogs
-##PKG: file
-##PKG: filesystem
-##PKG: findutils
-##PKG: gawk
-##PKG: gcc-libs
-##PKG: gettext
-##PKG: glibc
-##PKG: grep
-##PKG: gzip
-##PKG: inetutils
-##PKG: iproute2
-##PKG: iputils
-##PKG: less
-##PKG: licenses
-##PKG: linux
-##PKG: linux-firmware
-##PKG: logrotate
-##PKG: man-db
-##PKG: lvm2
-##PKG: man-pages
-##PKG: mdadm
-##PKG: pacman
-##PKG: pciutils
-##PKG: perl
-##PKG: procps-ng
-##PKG: psmisc
-##PKG: sed
-##PKG: nano
-##PKG: netctl
+##PKG: base
+##PKG: base-devel
 ##PKG: hwinfo
-##PKG: shadow
-##PKG: sysfsutils
-##PKG: systemd-sysvcompat
-##PKG: tar
-##PKG: texinfo
-##PKG: usbutils
-##PKG: util-linux
-##PKG: which
 ##PKG: nfs-utils
-##PKG: sudo
-##PKG: git
-##PKG: python
 ##PKG: devtools
 ##PKG: dialog
 ##PKG: wpa_supplicant
 ##PKG: ifenslave
 ##PKG: ifplugd
 ##PKG: ntp
-##PKG: openssh
 ##PKG: stow
 ##PKG: ripgrep
 ##PKG: fd
@@ -119,139 +72,65 @@ First time vim and zsh will install plugins."
 ##PKG: bat
 ##PKG: ncdu
 ##PKG: the_silver_searcher
-##PKG: tree
 ##PKG: p7zip
 ##PKG: ranger
 ##PKG: mtpfs
-##PKG: gnupg
 ##PKG: pass
+##PKG: openssh-askpass
 ##PKG: lsof
-##PKG: autoconf
-##PKG: automake
-##PKG: binutils
-##PKG: bison
-##PKG: fakeroot
-##PKG: flex
-##PKG: gcc
-##PKG: groff
-##PKG: libtool
-##PKG: m4
-##PKG: make
-##PKG: patch
-##PKG: pkgconf
-##PKG: systemd
 ##PKG: systemd-resolvconf
 ##PKG: cscope
 ##PKG: ctags
 ##PKG: llvm
 ##PKG: gdb
-##PKG: zsh
 ##PKG: zsh-syntax-highlighting
 ##PKG: zsh-autosuggestions
 ##PKG: zsh-completions
 ##PKG: zsh-history-substring-search
 ##PKG: neovim
-##PKG: gvim
-##PKG: python-numpy
+##PKG: vim-spell-en
 ##PKG: python-scipy
 ##PKG: python-sympy
-##PKG: python-cffi
-##PKG: python-cairocffi
-##PKG: python-docutils
 ##PKG: python-matplotlib
-##PKG: python-pillow
 ##PKG: python-pip
-##PKG: python-pygments
-##PKG: python-pytest
 ##PKG: python-mock
 ##PKG: python-pytest-mock
-##PKG: python-coverage
 ##PKG: python-pytest-cov
-##PKG: python-setuptools
 ##PKG: python-wheel
 ##PKG: python-pandas
-##PKG: python-sphinx
 ##PKG: python-lxml
 ##PKG: python-pyx
-##PKG: python-dateutil
 ##PKG: python-bottle
 ##PKG: python-cairosvg
 ##PKG: python-click
-##PKG: python-colorama
 ##PKG: python-doit
-##PKG: sqlite
+##PKG: ipython
 ##PKG: pandoc
 ##PKG: alsa-utils
-##PKG: pulseaudio
 ##PKG: pulseaudio-alsa
-##PKG: pavucontrol
-##PKG: xf86-input-libinput
+##PKG: pulsemixer
 ##PKG: xf86-video-intel
-##PKG: xorg-xsetroot
-##PKG: xorg-xkill
-##PKG: xorg-xbacklight
-##PKG: xorg-bdftopcf
-##PKG: xorg-iceauth
-##PKG: xorg-luit
-##PKG: xorg-mkfontdir
-##PKG: xorg-sessreg
-##PKG: xorg-setxkbmap
-##PKG: xorg-smproxy
-##PKG: xorg-x11perf
-##PKG: xorg-xauth
-##PKG: xorg-xcmsdb
-##PKG: xorg-xcursorgen
-##PKG: xorg-xdpyinfo
-##PKG: xorg-xdriinfo
-##PKG: xorg-xev
-##PKG: xorg-xgamma
-##PKG: xorg-xhost
-##PKG: xorg-xinput
-##PKG: xorg-xkbcomp
-##PKG: xorg-xkbevd
-##PKG: xorg-xkbutils
-##PKG: xorg-xlsatoms
-##PKG: xorg-xlsclients
-##PKG: xorg-xmodmap
-##PKG: xorg-xpr
-##PKG: xorg-xprop
-##PKG: xorg-xrandr
-##PKG: xorg-xrdb
-##PKG: xorg-xrefresh
-##PKG: xorg-xset
-##PKG: xorg-xvinfo
-##PKG: xorg-xwd
-##PKG: xorg-xwininfo
-##PKG: xorg-xwud
 ##PKG: xorg-server
+##PKG: xorg-apps
 ##PKG: xdg-user-dirs
-##PKG: openssh-askpass
-##PKG: glfw-x11
 ##PKG: wmctrl
-##PKG: xmonad
 ##PKG: xmonad-contrib
-##PKG: rxvt-unicode
 ##PKG: urxvt-perls
 ##PKG: xorg-xinit
 ##PKG: dmenu
-##PKG: gmrun
 ##PKG: scrot
 ##PKG: slock
 ##PKG: libnotify
 ##PKG: dunst
-##PKG: xsel
-##PKG: xclip
 ##PKG: dex
-##PKG: ttf-dejavu
 ##PKG: inkscape
 ##PKG: vlc
 ##PKG: firefox
 ##PKG: links
-##PKG: browserpass
 ##PKG: browserpass-firefox
 ##PKG: eom
 ##PKG: feh
-##PKG: zathura
 ##PKG: zathura-djvu
 ##PKG: zathura-pdf-mupdf
-##PKG: vim-spell-en
+##PKG: gvim
+
