integrate mw into mail settings

--- a/install
+++ b/install
@@ -1,46 +1,91 @@
 #!/usr/bin/bash
 
-#URL of this file
-#https://git.io/fjVcp
+# URL of this file
+# https://git.io/fjVcp
 
-if [[ ! -f /usr/bin/stow ]]; then
-    echo "you need to do: sudo pacman -S stow" >&2 && exit
-fi
+dotfiles_url="https://github.com/rpuntaie/dotfiles"
 
-if [[ ! -f /usr/bin/xdg-user-dirs-update ]]; then
-    echo "you need to do: sudo pacman -S xdg-user-dirs" >&2 && exit
-fi
-
-dotfilesurl=https://github.com/rpuntaie/dotfiles
-cd ~
-
-if [[ -d dotfiles ]]; then
-  cd dotfiles
-  if [[ ! "$(git config --get remote.origin.url)"=="$dotfilesurl" ]]; then
-    echo "This install script is for a different dotfiles" >&2
-    exit 1
+_dotfiles_check_packages(){
+  if [ ! -f /usr/bin/stow ]; then
+      echo "you need to do: sudo pacman -S stow" >&2 && return 1
   fi
-  cd ~
-  bash ~/dotfiles/bin/restowdots
-else
-  #if .dotfiles exits: $new_install=true ~/dotfiles/install
-  new_install=true
-  git clone $dotfilesurl
-  bash ~/dotfiles/bin/restowdots -S
-fi
+  if [ ! -f /usr/bin/xdg-user-dirs-update ]; then
+      echo "you need to do: sudo pacman -S xdg-user-dirs" >&2 && return 1
+  fi
+  return 0
+}
 
-if [[ -n $new_install ]] && $new_install; then
+_dotfiles_restowdots(){
+  cd ~
+  if [ -d dotfiles ]; then
+    cd dotfiles
+    if [ ! "$(git config --get remote.origin.url)" = "$dotfiles_url" ]; then
+      echo "This install script is for a different dotfiles" >&2
+      exit 1
+    fi
+    cd ~
+    bash ~/dotfiles/bin/restowdots
+  else
+    # if .dotfiles exits: $dotfiles_new_install=true ~/dotfiles/install
+    dotfiles_new_install=true
+    git clone $dotfiles_url
+    bash ~/dotfiles/bin/restowdots -S
+  fi
+}
+
+#activate the variable defined in .pam_environment
+_dotfiles_pam_environment(){
+  eval "$(sed -ne "s/DEFAULT=/=/p" .pam_environment | sed -ne '/OVERRIDE\|@{\|:/!p' | sed "s/ //g" | sed "s/^.*/export \0/")"
+}
+
+_dotfiles_fonts(){
   fc-cache -fv
+}
+
+_dotfiles_python(){
   bash ~/dotfiles/bin/my_python
-  NPM_CONFIG_PREFIX=~/.local/var/lib/npm bash ~/dotfiles/bin/my_nodejs
+}
+
+_dotfiles_nodejs(){
+  bash ~/dotfiles/bin/my_nodejs
+}
+
+_dotfiles_weechat(){
+  # weechat: no symlink, because it changes the files
   rsync -a ~/dotfiles/etc/weechat/ ~/.local/var/lib/weechat/
   mkdir -p ~/.local/var/lib/weechat/ssl
   cd ~/.local/var/lib/weechat/ssl
   openssl req -nodes -newkey rsa:2048 -keyout relay.pem -x509 -days 365 -out relay.pem -subj "/C=AT/ST=AT/L=AT/O=ME/OU=IT/CN=me.org"
+}
+
+_dotfiles_email(){
+  # wm into ~/.local/bin
+  cd ~/.local/bin
+  curl -OLs https://raw.githubusercontent.com/rpuntaie/mutt-wizard/master/bin/mw
+  chmod +x mw
+  #setup email
+  a=roland.puntaier@chello.at mwtype=offline mwaddr=$a mwlogin=$a mwpass=magenta.at/$a mwserverinfo="chello.at,mail.upcmail.at,995,mail.upcmail.at,465" mwname="Roland Puntaier" ./mw add
+  a=roland.puntaier@gmail.com mwtype=offline mwaddr=$a mwlogin=$a mwpass=gmail/$a mwserverinfo="gmail.com,imap.gmail.com,993,smtp.gmail.com,587" mwname="Roland Puntaier" ./mw add
+  a=puntaier.roland@gmail.com mwtype=offline mwaddr=$a mwlogin=$a mwpass=gmail/$a mwserverinfo="gmail.com,imap.gmail.com,993,smtp.gmail.com,587" mwname="Puntaier Roland" ./mw add
+  a=dontbite71@gmail.com mwtype=offline mwaddr=$a mwlogin=$a mwpass=gmail/$a mwserverinfo="gmail.com,imap.gmail.com,993,smtp.gmail.com,587" mwname="Dont Bite" ./mw add
+}
+
+#main
+if [ "${BASH_SOURCE[0]}" = "${0}" ]; then
+  _dotfiles_check_packages || exit $?
+  _dotfiles_pam_environment
+  _dotfiles_restowdots
+  if [ -n "$dotfiles_new_install" ] && $dotfiles_new_install; then
+    _dotfiles_fonts
+    _dotfiles_python
+    _dotfiles_nodejs
+    _dotfiles_weechat
+    _dotfiles_email
+  fi
+  echo -e "\033[0;32mLog out and in, to activate the environment.
+First time vim and zsh will install plugins."
 fi
 
-echo -e "\033[0;32mLog out and in, to activate the environment.
-First time vim and zsh will install plugins."
 
 #rollarch interprets lines starting with "^#PKG: ", "^#REPO: " and "^#DFN: ".
 
